Array insert support